fix scrollbar in dark mood

--- a/src/index.sass
+++ b/src/index.sass
@@ -88,6 +88,24 @@ button:focus-visible
   font-size: 16px
   font-weight: 900
 
+/* شريط التمرير الأساسي (Chrome, Edge, Safari) */
+::-webkit-scrollbar
+  width: 10px
+  background: #fff
+
+/* مقبض شريط التمرير */
+::-webkit-scrollbar-thumb
+  background: #ccc
+  border-radius: 8px
+
+::-webkit-scrollbar-thumb:hover
+  background: #bbb
+
+/* شريط التمرير في فايرفوكس */
+*
+  scrollbar-width: thin
+  scrollbar-color: #ccc #fff
+
 @media (prefers-color-scheme: light)
   :root
     color: #213547
